--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,79 @@
 .Circle {
   height: 15px;
   width: 15px;
-  background: #fff;
+  background: #909195;
   border-radius: 50%;
   opacity: 0;
   animation: showCircle 0.2s ease forwards;
   animation-fill-mode: both;
+}
+
+.CTATextWrapper {
+  width: 100vw;
+}
+
+.CTAText {
+  position: absolute;
+  text-align: center;
+  width: 70%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.CTAText h1 {
+  font-size: 2.5rem;
+  user-select: none;
+  font-weight: 600;
+  margin: 0;
+  color: #909195;
+  margin-bottom: 30px;
+}
+
+.CTAText h2 {
+  font-size: 1.5rem;
+  user-select: none;
+  font-weight: 400;
+  margin: 0;
+  color: #5a5b60;
+  margin-bottom: 80px;
+}
+
+.CTAKeys {
+  max-width: fit-content;
+  margin: 0 auto;
+}
+
+.Key {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.Keys {
+  display: flex;
+  gap: 5px;
+}
+
+.KeyDesc {
+  color: #909195;
+  font-weight: 500;
+  user-select: none;
+}
+
+.KeyItem {
+  background: #34383f;
+  user-select: none;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 #34383f;
 }
 
 .ControlBar,
@@ -25,7 +93,7 @@
   left: 30px;
   width: fit-content;
   height: 35px;
-  background: rgba(255, 255, 255, 0.1);
+  background: #1d1f24;
   border-radius: 0px 0px 5px 5px;
   display: flex;
   justify-content: space-evenly;
