--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 }
 
 .CTAText h2 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   user-select: none;
   font-weight: 400;
   margin: 0;
@@ -57,8 +57,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 50px;
+  margin-bottom: 10px;
 }
 
 .Keys {
@@ -70,6 +70,39 @@
   color: #909195;
   font-weight: 500;
   user-select: none;
+}
+
+a {
+  color: #909195;
+  font-size: 1.3rem;
+  text-decoration: none;
+  position: relative;
+}
+
+a:active,
+a:focus,
+a:-webkit-any-link {
+  outline: none;
+  text-decoration: none !important;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  border-radius: 4px;
+  background-color: #909195;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 .KeyItem {
